--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <p class="classp">This is a page about the best childhood books. If you didnt read these, you didn't have a good childhood. </p>
     </head>
     <body id="classy">
-        <h2 id="bar-home-class"><a href="/Users/3075037/Desktop/bookclub/index.html"> Home</a></h2>
-        <h2 id="bar-classic-class"><a href="/Users/3075037/Desktop/bookclub/cLaSsIc.html">Here</a></h2>
+        <h2 id="bar-home-class"><a href="https://mlegghr2.github.io/realbookclub/"> Home</a></h2>
+        <h2 id="bar-classic-class"><a href="https://mlegghr2.github.io/classics/">Here</a></h2>
         <h2 id="bar-favs-class"><a href="/Users/3075037/Desktop/bookclub/favs.html">Creator's Pick</a></h2>
         <h2 id="bar-movies-class"><a href="/Users/3075037/Desktop/bookclub/movieclub.html">Movies Based Off of Books</a></h2>
 
