--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body id="classy">
         <h2 id="bar-home-class"><a href="https://mlegghr2.github.io/realbookclub/"> Home</a></h2>
         <h2 id="bar-classic-class"><a href="https://mlegghr2.github.io/classics/">Here</a></h2>
-        <h2 id="bar-favs-class"><a href="/Users/3075037/Desktop/bookclub/favs.html">Creator's Pick</a></h2>
+        <h2 id="bar-favs-class"><a href="https://mlegghr2.github.io/creatorspicks/">Creator's Pick</a></h2>
         <h2 id="bar-movies-class"><a href="/Users/3075037/Desktop/bookclub/movieclub.html">Movies Based Off of Books</a></h2>
 
         <h3 class="classh3"> 1. Harry Potter Series, by JK Rowling</h3>
